--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=M+PLUS+1+Code:wght@100&family=Roboto:ital,wght@0,100;0,900;1,900&display=swap" rel="stylesheet">
-    
+    <script src="./main/main.js"></script>
     <title>Document</title>
 </head>
 <body>
@@ -100,6 +100,6 @@
             <li></li>
         </ul>
     </footer>
-    <script src="../main/main.js"></script>
+    
 </body>
 </html>
