--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
     
     <script type="text/javascript" id="www-widgetapi-script" src="https://s.ytimg.com/yts/jsbin/www-widgetapi-vflS50iB-/www-widgetapi.js" async=""></script>
     <script src="https://www.youtube.com/player_api"></script>
-    <script src="./main/youtubeVideos.js" type="text/javascript"></script>
+    <script src="../main/youtubeVideos.js" type="text/javascript"></script>
     <title>Mentes Brillantes</title>
-    <script src="./main/main.js"></script>
 </head>
 <body>
     <header class="main-header">
