--- a/index.html
+++ b/index.html
@@ -96,10 +96,6 @@
             <li></li>
         </ul>
     </footer>
-<<<<<<< HEAD
-    <script src="./main/main.js"></script>
-=======
-    
->>>>>>> 3f3181e5836c43c029517583ac35984e9fee8cb1
+    <script src="../main/main.js"></script>
 </body>
 </html>
