--- a/index.html
+++ b/index.html
@@ -96,6 +96,6 @@
         </ul>
     </footer>
     <script src="./main/youtubeVideos.js" type="text/javascript"></script>
-    <script src="../main/main.js"></script>
+    <script src="./main/main.js"></script>
 </body>
 </html>
